[tool.poetry]
name = "httpie-hush"
version = "0.1"
description = "Hush OAuth 2 plugin for the HTTPie command line HTTP client"
authors = ["Gilad Sever <gilad9366@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
